<resources>
    <string name="app_name">MindBin</string>
    <string name="app_license">GNU General Public License v3.0</string>
    <string name="app_author">eipna</string>

    <string name="toolbar_main">Notes</string>
    <string name="toolbar_create">New note</string>
    <string name="toolbar_edit">Edit note</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_archive">Archive</string>
    <string name="toolbar_trash">Trash</string>
    <string name="toolbar_folder">Folders</string>

    <string name="input_hint_note_title">Title</string>
    <string name="input_hint_note_content">Content</string>

    <string name="menu_pin">Pin</string>
    <string name="menu_unpin">Unpin</string>
    <string name="menu_edit_folder">Edit</string>
    <string name="menu_delete_folder">Delete</string>
    <string name="menu_save">Save</string>
    <string name="menu_sort">Sort By</string>
    <string name="menu_sort_title">Title</string>
    <string name="menu_sort_date_created">Date Created</string>
    <string name="menu_sort_ascending">Ascending</string>
    <string name="menu_sort_descending">Descending</string>
    <string name="menu_share">Share Note</string>
    <string name="menu_overflow">More Options</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_unarchive">Unarchive</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_folder">Folders</string>
    <string name="menu_delete_forever">Delete Forever</string>
    <string name="menu_clear_trash">Clear Trash</string>
    <string name="menu_search_note">Search Notes</string>

    <string name="dialog_folder_edit_title">Edit folder</string>
    <string name="dialog_folder_create_title">Create folder</string>
    <string name="dialog_folder_delete_title">Delete folder</string>
    <string name="dialog_folder_delete_message">Please note that while the folder will be removed, all notes within it will remain safe and accessible.</string>
    <string name="dialog_note_delete_title">Permanent Deletion</string>
    <string name="dialog_note_delete_message">Are you sure you want to delete this note? Once deleted, it cannot be recovered.</string>
    <string name="dialog_note_clear_all_title">Permanent Deletion </string>
    <string name="dialog_note_clear_all_message">This action will permanently delete all notes in the trash. Are you sure you want to proceed?</string>

    <string name="dialog_button_edit">Edit</string>
    <string name="dialog_button_create">Create</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_clear">Clear</string>
    <string name="dialog_button_delete">Delete</string>

    <string name="recycler_note_title">Lorem Ipsum.</string>
    <string name="recycler_note_content">Lorem ipsum odor amet, consectetuer adipiscing elit. Sociosqu amet urna faucibus per eleifend, erat rutrum. Maximus eros tortor eget; sit metus tempus. Condimentum nibh litora velit augue fames. Ac consequat fames augue felis; sagittis vitae consectetur adipiscing. Finibus congue gravida litora dis amet. Dictumst elit ridiculus aenean suscipit fringilla placerat ante dictumst consequat. Diam adipiscing semper nunc massa sapien arcu consectetur praesent convallis. Ex ac cras nulla porttitor torquent bibendum.</string>
    <string name="recycler_note_date_created">Sunday, January 19 2025</string>

    <string name="recycler_folder_name">Personal</string>
    <string name="recycler_folder_description">A folder for my personal space.</string>

    <string name="field_error_required">*required</string>
    <string name="field_error_folder_exists">Folder already exists</string>

    <string name="indicator_notes_empty">No notes found</string>
    <string name="indicator_archive_empty">Archive is empty</string>
    <string name="indicator_trash_empty">Trash is empty</string>
    <string name="indicator_folders_empty">No folders found</string>

    <string name="toast_decline_share">Nothing to share here</string>
    <string name="toast_decline_sort">Nothing to sort here</string>

    <!-- Application Shortcuts -->
    <string name="shortcut_new_note">New Note</string>

    <!-- General Preference Category -->
    <string name="preference_category_appearance">Appearance</string>
    <string name="preference_list_theme">Theme</string>
    <string name="preference_list_contrast">Contrast</string>
    <string name="preference_list_view_mode">View Mode</string>
    <string name="preference_switch_dynamic_colors_title">Dynamic Colors</string>
    <string name="preference_switch_dynamic_colors_summary">Apply colors from your wallpaper to the application theme</string>

    <!-- Notes Preference Category -->
    <string name="preference_category_notes">Notes</string>
    <string name="preference_switch_rounded_corners">Rounded Corners</string>
    <string name="preference_switch_date_created">Date Created</string>
    <string name="preference_list_date_format">Date Created Format</string>

    <!-- About Preference Category -->
    <string name="preference_category_about">About</string>
    <string name="preference_version">Version</string>
    <string name="preference_license">License</string>
    <string name="preference_list_third_party_libraries_title">Third-party libraries</string>
    <string name="preference_list_third_party_libraries_summary">Third-party libraries that MindBin uses</string>
    <string name="preference_author">Author</string>
    <string name="preference_source_code_title">Source Code</string>
    <string name="preference_source_code_summary">Check the Github repository and the README</string>
</resources>