<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category_appearance"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="theme"
            android:title="@string/preference_list_theme"
            app:iconSpaceReserved="false"/>

        <ListPreference
            android:key="contrast"
            android:title="@string/preference_list_contrast"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            android:key="dynamic_colors"
            android:title="@string/preference_switch_dynamic_colors_title"
            android:summary="@string/preference_switch_dynamic_colors_summary"
            android:widgetLayout="@layout/view_preference_switch"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_notes"
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="view_mode"
            android:title="@string/preference_list_view_mode"
            app:iconSpaceReserved="false"/>

        <SeekBarPreference
            android:key="max_note_title"
            android:title="@string/preference_seekbar_max_note_title"
            app:iconSpaceReserved="false"/>

        <SeekBarPreference
            android:key="max_note_content"
            android:title="@string/preference_seekbar_max_note_content"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            android:key="rounded_corners"
            android:title="@string/preference_switch_rounded_corners"
            app:iconSpaceReserved="false"
            android:widgetLayout="@layout/view_preference_switch"/>

        <SwitchPreferenceCompat
            android:key="show_date_created"
            android:title="@string/preference_switch_date_created"
            app:iconSpaceReserved="false"
            android:widgetLayout="@layout/view_preference_switch"/>

        <ListPreference
            android:key="date_format"
            android:title="@string/preference_list_date_format"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_about"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true">

        <Preference
            android:key="license"
            android:title="@string/preference_license"
            android:summary="@string/app_license"
            app:iconSpaceReserved="false"/>

        <Preference
            android:title="@string/preference_source_code_title"
            android:summary="@string/preference_source_code_summary"
            app:iconSpaceReserved="false">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/eipna/MindBin"/>
        </Preference>

        <Preference
            android:title="@string/preference_author"
            android:summary="@string/app_author"
            app:iconSpaceReserved="false">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/eipna"/>
        </Preference>

        <Preference
            android:key="version"
            android:title="@string/preference_version"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

</PreferenceScreen>