<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/overflow"
        android:title="@string/menu_overflow"
        android:icon="@drawable/ic_more_vertical"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/unarchive"
                android:title="@string/menu_unarchive"/>

            <item
                android:id="@+id/archive"
                android:title="@string/menu_archive"/>

            <item
                android:id="@+id/restore"
                android:title="@string/menu_restore"/>

            <item
                android:id="@+id/trash"
                android:title="@string/menu_trash"/>

            <item
                android:id="@+id/delete_forever"
                android:title="@string/menu_delete_forever"/>
        </menu>
    </item>
</menu>