<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/menu_search_note"
        app:showAsAction="collapseActionView|always"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/sort"
        android:title="@string/menu_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always">

        <menu>
            <group
                android:id="@+id/sort_note_criteria"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/sort_note_title"
                    android:title="@string/menu_sort_title"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/sort_note_date_created"
                    android:title="@string/menu_sort_date_created"
                    app:showAsAction="never"/>
            </group>

            <group
                android:id="@+id/sort_note_order"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/sort_note_ascending"
                    android:title="@string/menu_sort_ascending"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/sort_note_descending"
                    android:title="@string/menu_sort_descending"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>

    <item
        android:title="@string/menu_overflow"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_more_vertical">

        <menu>
            <item
                android:id="@+id/folder"
                app:showAsAction="never"
                android:title="@string/menu_folder"/>

            <item
                android:id="@+id/archive"
                android:title="@string/menu_archive"
                app:showAsAction="never"/>

            <item
                android:id="@+id/trash"
                android:title="@string/menu_trash"
                app:showAsAction="never"/>

            <item
                android:id="@+id/settings"
                android:title="@string/menu_settings"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>